fixed some warnings and removed redundant code